Fix out of stock indicator in grouped products

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-actions.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-actions.phtml
@@ -411,7 +411,7 @@ if (!$inStock) {
             class="
                 animate-on-transition button button--disabled button--outline-secondary flex-grow
                 <?= $isSmall ? 'button--size-sm' : '' ?>
-                <?= ($inStock || (!$isPopup && $hasVariants)) ? 'max-md:hidden' : '' ?>
+                <?= ($inStock || (!$isPopup && ($hasVariants || $productType === 'grouped'))) ? 'max-md:hidden' : '' ?>
                 <?= $inStock ? 'md:hidden' : '' ?>
                 <?= $isPopup ? 'max-sm:px-3' : '' ?>
             "
