--- a/app/design/frontend/Satoshi/Hyva/Magento_CatalogSearch/layout/catalogsearch_advanced_index.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_CatalogSearch/layout/catalogsearch_advanced_index.xml
@@ -3,5 +3,6 @@
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="columns" htmlClass="content-wrapper mx-auto"/>
+        <referenceContainer name="div.sidebar.additional" remove="true"/>
     </body>
 </page>
