--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
@@ -146,6 +146,10 @@ h3 {
 .grid-columns {
   @apply h-full flex flex-col md:grid grid-rows-[auto_minmax(0,1fr)] gap-x-8 gap-y-5;
   grid-template-columns: 275px repeat(2, minmax(0, 1fr)) 275px;
+
+  &:has(.sidebar-additional-hidden) {
+    grid-template-columns: 275px repeat(2, minmax(0, 1fr));
+  }
 }
 
 .grid-columns-plp {
