INTERNAL-447: Display error message in PDP when can't add to cart

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-form.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-form.phtml
@@ -2,9 +2,9 @@
 
 declare(strict_types=1);
 
-use Magento\Catalog\Block\Product\View;
 use Magento\Catalog\Model\Product;
 use Magento\Framework\Escaper;
+use Satoshi\Catalog\Block\Product\View;
 
 /** @var View $block */
 /** @var Escaper $escaper */
