--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-button.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-button.phtml
@@ -3,10 +3,12 @@ declare(strict_types=1);
 
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\SvgIcons;
-use Satoshi\Theme\Block\Template;
+use Magento\Framework\Escaper;
+use Satoshi\Theme\Block\Minicart;
 use Satoshi\Theme\ViewModel\Cart\Cart;
 
-/** @var Template $block */
+/** @var Minicart $block */
+/** @var Escaper $escaper */
 /** @var ViewModelRegistry $viewModels */
 /** @var SvgIcons $hyvaicons */
 $hyvaicons = $viewModels->require(SvgIcons::class);
@@ -18,7 +20,10 @@ $cartTotals = $cart->getSerializedCartTotals();
 ?>
 
 <button
-    x-init='$store.cart.setCartTotals(<?= $cartTotals ?>)'
+    x-init="() => {
+        $store.cart.setCartTotals(<?= $escaper->escapeHtmlAttr($cartTotals) ?>)
+        $store.cart.setErrorMessage(`<?= $escaper->escapeHtmlAttr($block->getMiniCartErrorMessage()) ?>`)
+    }"
     id="cart-button"
     class="contrast-border md:button--filled-secondary button ghost-primary icon-button icon-button--size-lg col-start-5"
     x-a11y-trap-element="$store.transition.isPreviewActive && !$store.resizable.isVisible()"
