--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
@@ -21,7 +21,12 @@ $mixBackground = true;
 <div
     class="flex flex-col gap-5 <?= $isCartPage ? 'flex-1 md:pr-5' : 'md:overflow-auto md:max-h-[calc(100dvh-225px)] md:px-4' ?>"
 >
-    <div class="text-error" x-text="$store.cart.errorMessage"></div>
+    <div
+        class="text-error"
+        x-text="$store.cart.errorMessage"
+        x-show="$store.cart.errorMessage.length"
+        x-transition
+    ></div>
     <div
         class="flex flex-col gap-5 md:gap-5 md:pb-3 <?= $isCartPage ? 'md:grid md:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4' : 'md:pt-4 md:pb-10' ?>"
     >
