--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-overlay.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-overlay.phtml
@@ -34,7 +34,7 @@ $title = $block->getData('title');
     <div
         class="flex flex-col gap-5 rounded-md p-5 <?= $isCartPage ? '' : 'md:w-[--minicart-width] bg-bg-500' ?> md:gap-0 md:px-0 md:py-0 max-md:py-0 [.popup\_\_main_&]:px-2">
         <div
-            class="flex items-center justify-between bg-bg-500 md:h-[--initial-height] md:min-h-14 md:rounded-md max-md:pb-4 <?= $isCartPage ? 'md:gap-4 md:flex-row-reverse md:justify-end' : 'md:px-6 sticky top-0 z-20' ?>">
+            class="flex items-center justify-between md:h-[--initial-height] md:min-h-14 md:rounded-md max-md:pb-4 <?= $isCartPage ? 'md:flex-row-reverse md:justify-end' : 'md:px-6 sticky top-0 z-10' ?>"
             <h1 class="flex items-center text-lg text-text-500 <?= $isCartPage ? '' : 'md:text-md' ?>">
                 <?php if (!$isCartPage) : ?>
                     <span class="button__icon mr-4 text-[1.5rem] max-md:hidden">
@@ -52,7 +52,7 @@ $title = $block->getData('title');
                     <a
                         href="<?= $escaper->escapeUrl($block->getUrl('checkout/cart')) ?>"
                         x-element-transition-trigger
-                        class="link link--ghost <?= $isCartPage ? 'hidden' : '' ?>"
+                        class="link link--ghost md:mr-4 <?= $isCartPage ? 'hidden' : '' ?>"
                     >
                         <?= __('View cart') ?>
                         <span
