--- a/app/design/frontend/Satoshi/Hyva/Magento_Review/templates/helper/summary.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Review/templates/helper/summary.phtml
@@ -25,7 +25,7 @@ $productId = $block->getProduct()->getId();
 $uniqueId = $productId . uniqid();
 ?>
 <?php if ($block->isReviewEnabled()): ?>
-    <div
+    <button
         x-data="Rating"
         @keyup.enter="scrollToRatings()"
         @click="scrollToRatings()"
@@ -58,9 +58,9 @@ $uniqueId = $productId . uniqid();
             <?php endwhile; ?>
             <?php if ($starFragment): ?>
                 <svg
-                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
-                        style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"
-                        class="text-xl"
+                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                    style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"
+                    class="text-xl"
                 >
                     <defs>
                         <linearGradient id="partialFill<?= /* @noEscape */
@@ -92,5 +92,5 @@ $uniqueId = $productId . uniqid();
                 <?php $i++; ?>
             <?php endwhile; ?>
         <?php endif; ?>
-    </div>
+    </button>
 <?php endif; ?>
