--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-button.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-button.phtml
@@ -1,18 +1,23 @@
 <?php
+
+declare(strict_types=1);
+
+use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\SvgIcons;
 
+/** @var ViewModelRegistry $viewModels */
 /** @var SvgIcons $hyvaicons */
 $hyvaicons = $viewModels->require(SvgIcons::class);
 
 ?>
 
 <button
-  tabindex="0"
-  class="contrast-border md:button--filled-secondary button ghost-primary icon-button icon-button--size-lg"
-  aria-label="<?= __('Open search') ?>"
-  @keydown.space.prevent="$store.resizable.show('search-desktop')"
-  @keydown.enter.prevent="$store.resizable.show('search-desktop')"
-  x-a11y-trap-element="$store.transition.isPreviewActive && !$store.resizable.isVisible()"
+    tabindex="0"
+    class="contrast-border md:button--filled-secondary button ghost-primary icon-button icon-button--size-lg"
+    aria-label="<?= __('Open search') ?>"
+    @keydown.space.prevent="$store.resizable.show('search-desktop')"
+    @keydown.enter.prevent="$store.resizable.show('search-desktop')"
+    x-a11y-trap-element="$store.transition.isPreviewActive && !$store.resizable.isVisible()"
 >
-  <?= $hyvaicons->renderHtml('search') ?>
+    <?= $hyvaicons->renderHtml('search') ?>
 </button>
