--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-button.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-button.phtml
@@ -12,7 +12,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 ?>
 
 <button
-    tabindex="0"
+    :tabindex="$store.resizable.isVisible('search-desktop') ? -1 : 0"
     class="contrast-border md:button--filled-secondary button ghost-primary icon-button icon-button--size-lg"
     aria-label="<?= __('Open search') ?>"
     @keydown.space.prevent="$store.resizable.show('search-desktop')"
