--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-categories.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-categories.phtml
@@ -15,38 +15,44 @@ $categoryUrlSuffix = $breadcrumbsViewModel->getCategoryUrlSuffix();
 ?>
 <div
     x-show="searchTerm.length > 2"
-    class="relative flex grow flex-col gap-4 p-3 pb-2 transition-opacity duration-300 md:p-5"
-    :class="{ 'opacity-0': isLoading }"
+    class="transition overflow-hidden"
+    :class="{
+        'opacity-0': isLoading,
+        'max-h-0': !categories.length,
+    }"
 >
-    <div class="pb-2">
-        <h2 class="text-lg"><?= __('Categories') ?></h2>
-    </div>
-    <div class="flex flex-col gap-2">
-        <p x-show="!categories.length && searchTerm">
-            <b class="font-semibold text-secondary-700"><?= __('Oops!') ?></b>
-            <?= __('We could not find any categories matching your search.') ?>
-        </p>
+    <div class="relative flex grow flex-col gap-4 p-3 pb-2 md:p-5">
+        <div class="pb-2">
+            <h2 class="text-lg"><?= __('Categories') ?></h2>
+        </div>
+        <div class="flex flex-col gap-2">
+            <p x-show="!categories.length && searchTerm">
+                <b class="font-semibold text-secondary-700"><?= __('Oops!') ?></b>
+                <?= __('We could not find any categories matching your search.') ?>
+            </p>
 
-        <div
-            x-show="categories.length"
-            class="-mx-5 flex gap-3 overflow-x-auto px-5 py-1 md:max-w-[--search-width] max-md:pb-3"
-        >
-            <template x-for="category in categories">
-                <a
-                    :href="`/${category.url_path}<?= $escaper->escapeUrl($categoryUrlSuffix) ?>`"
-                    class="button button--outline-secondary"
-                    x-element-transition-trigger:category.animate="{
-                        'title': category.name,
-                    }"
-                    x-text="category.name"
-                ></a>
-            </template>
+            <div
+                x-show="categories.length"
+                class="-mx-5 flex gap-3 overflow-x-auto px-5 py-1 md:max-w-[--search-width] max-md:pb-3"
+            >
+                <template x-for="category in categories">
+                    <a
+                        :href="`/${category.url_path}<?= $escaper->escapeUrl($categoryUrlSuffix) ?>`"
+                        class="button button--outline-secondary"
+                        x-element-transition-trigger:category.animate="{
+                            'title': category.name,
+                        }"
+                        x-text="category.name"
+                    ></a>
+                </template>
+            </div>
         </div>
     </div>
+
+    <hr
+        x-show="searchTerm.length > 2"
+        class="divider -mx-3"
+        :class="{ 'opacity-0': isLoading }"
+    >
 </div>
 
-<hr
-    x-show="searchTerm.length > 2"
-    class="divider -mx-3 transition-opacity duration-300"
-    :class="{ 'opacity-0': isLoading }"
->
