--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search.phtml
@@ -37,7 +37,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
             <input
                 type="search"
                 placeholder="<?= __('Search') ?>"
-                class="input__field input__field--filled hover:bg-bg-500 border-none focus-visible:input__field--outline md:input__field--ghost md:focus-visible:input__field--ghost pr-11 placeholder:text-text-500 md:order-2 md:px-2 md:placeholder:text-primary-500 md:focus-visible:border-transparent md:focus-visible:shadow-none md:focus-visible:outline-0"
+                class="input__field input__field--filled hover:bg-transparent border-none focus-visible:input__field--outline md:input__field--ghost md:focus-visible:input__field--ghost pr-11 placeholder:text-text-500 md:order-2 md:px-2 md:placeholder:text-primary-500 md:focus-visible:border-transparent md:focus-visible:shadow-none md:focus-visible:outline-0"
                 x-model="searchTermInput"
                 @input.debounce.500ms="setSearchTerm"
                 name="q"
@@ -80,7 +80,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 
     <div
         x-show="getIsSearchActive()"
-        class="flex flex-col gap-3 overflow-x-hidden pt-2 transition-opacity duration-0 md:inset-x-0 md:top-full md:max-h-[calc(100dvh-125px)] md:rounded-t-none md:pt-0 md:duration-300 md:before:rounded-none"
+        class="flex flex-col gap-3 overflow-x-hidden pt-2 transition-opacity duration-0 md:inset-x-0 md:top-full md:max-h-[calc(100dvh-125px)] md:rounded-t-none md:pt-0 md:duration-300 md:rounded-none"
         x-transition:enter="md:delay-450"
         x-transition:enter-start="md:opacity-0"
         x-transition:enter-end="md:opacity-100"
@@ -91,9 +91,11 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
             'md:hidden': !$store.resizable.isVisible('search-desktop')
         }"
     >
-        <?= $template->render('Magento_Theme::html/header/search/search-suggestions.phtml') ?>
-        <?= $template->render('Magento_Theme::html/header/search/search-categories.phtml') ?>
-        <?= $template->render('Magento_Theme::html/header/search/search-products.phtml') ?>
+        <div class="max-md:mt-[50px]">
+            <?= $template->render('Magento_Theme::html/header/search/search-suggestions.phtml') ?>
+            <?= $template->render('Magento_Theme::html/header/search/search-categories.phtml') ?>
+            <?= $template->render('Magento_Theme::html/header/search/search-products.phtml') ?>
+        </div>
         <div
             class="transition-opacity duration-300 md:sticky md:bottom-0 md:z-10 md:w-full md:rounded-b-md md:bg-bg-500"
             id="search-actions"
